--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
           coferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no 
           lo eres.... por ahora.
         </p>
+        <p>Subcrivete y dale like</p>
       </div>
     </div>
   </body>
