--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="container">
-      <div id="cabecera">welcome !! 
+      <div id="cabecera">welcome to my blogspot !! 
           <span id="tagline">este es el blog de cabecera</span>
       </div>
       <div id="post">
