--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
+  <a href=""></a>
     <div id="container">
       <div id="cabecera">welcome to my blogspot !! 
           <span id="tagline">este es el blog de cabecera</span>
