--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
         </p>
         <p>Subcrivete y dale like</p>
       </div>
+      <div id="footer">
+        Hecho con amor por Anita <3
+      </div>
     </div>
   </body>
 </html>
