--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
   <body>
   <a href=""></a>
     <div id="container">
-      <div id="cabecera">Bienvenidos a nuestro blogpost Leo y Anita !! 
+      <div id="cabecera">Bienvenidos Hyperblog !! 
           <span id="tagline">este es el blog de cabecera</span>
       </div>
       <div id="post">
@@ -24,7 +24,7 @@
         <p>Subcrivete y dale like</p>
       </div>
       <div id="footer">
-        Hecho con amor por Anita <3
+        Hecho con amor por Anita ❤️
       </div>
     </div>
   </body>
