--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
           coferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no 
           lo eres.... por ahora.
         </p>
+        <p> Este es un nuevo parrafo, espero quedarme mucho tiempo</p>
         <p>Subcrivete y dale like</p>
       </div>
       <div id="footer">
